<resources>
    <string name="app_name" translatable="false">PlacarApp</string>
    <string name="label_titulo">Teams</string>
    <string name="label_desenvolvido_por_vinicius_portela">Developed by Vinicius Portela</string>
    <string name="label_time_casa">Home Team</string>
    <string name="label_time_visitante">Visitor Team</string>
    <string name="label_digite_o_nome_do_time_da_casa">Write name home team</string>
    <string name="label_digite_o_nome_do_time_visitante">Write name visitor team</string>
    <string name="button_come_ar_jogo">Play Game</string>
    <string name="placar_inicial" translatable="false">0</string>
    <string name="label_gol">GOAL</string>
</resources>
